# isaacus-haystack

./: .gitignore  README.md  pyproject.toml
src/haystack_integrations/components/embedders/isaacus/: document_embedder.py  utils.py
tests/: test_kanon2_embedder.py
